--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-642.3KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-338.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-152.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-285.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-265.2KB/s(Youtube:不良林), server: 172.99.190.39, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-267.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-269.4KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-834.3KB/s(Youtube:不良林), server: 167.88.63.79, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-392.9KB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇬🇧 英国-552.4KB/s(Youtube:不良林), server: 172.99.190.39, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-834.0KB/s(Youtube:不良林), server: 38.75.136.21, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-642.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
