--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-285.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-265.2KB/s(Youtube:不良林), server: 172.99.190.39, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-267.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-269.4KB/s(Youtube:不良林), server: 172.99.190.39, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-834.3KB/s(Youtube:不良林), server: 167.88.63.79, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-392.9KB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇬🇧 英国-552.4KB/s(Youtube:不良林), server: 172.99.190.39, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-834.0KB/s(Youtube:不良林), server: 38.75.136.21, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇬🇧 英国-1.13MB/s(Youtube:不良林), server: 172.99.190.39, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-573.5KB/s(Youtube:不良林), server: 38.75.136.21, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 保加利亚-399.8KB/s(Youtube:不良林), server: 213.183.63.221, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇨🇳 中国-285.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林), server: 185.167.116.24, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇳🇱 荷兰-270.0KB/s(Youtube:不良林), server: 213.183.59.177, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.114.114.19, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-854.1KB/s(Youtube:不良林), server: 38.114.114.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-877.7KB/s(Youtube:不良林), server: 38.114.114.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-915.7KB/s(Youtube:不良林), server: 167.88.61.50, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-265.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-269.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-392.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-552.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 保加利亚-399.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
