--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-267.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 保加利亚-399.8KB/s(Youtube:不良林), server: 213.183.63.221, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇨🇳 中国-285.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林), server: 185.167.116.24, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇳🇱 荷兰-270.0KB/s(Youtube:不良林), server: 213.183.59.177, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.114.114.19, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-854.1KB/s(Youtube:不良林), server: 38.114.114.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 未知国家-1.22MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-582.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-877.7KB/s(Youtube:不良林), server: 38.114.114.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-915.7KB/s(Youtube:不良林), server: 167.88.61.50, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.114.114.19, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-573.5KB/s(Youtube:不良林), server: 38.75.136.21, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.19, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇬🇧 英国-795.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 保加利亚-399.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-270.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
+      - 未知国家-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-915.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-593.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
