--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 未知国家-1.22MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-582.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-877.7KB/s(Youtube:不良林), server: 38.114.114.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.114.114.19, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-573.5KB/s(Youtube:不良林), server: 38.75.136.21, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.114.114.19, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇬🇧 英国-795.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-320.3KB/s(Youtube:不良林), server: 213.183.59.177, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇬🇧 英国-455.1KB/s(Youtube:不良林), server: 172.99.190.39, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-365.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇯🇵 日本-1.12MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-474.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-363.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-478.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 未知国家-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-877.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-573.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-795.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-320.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-455.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-760.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-474.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-478.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
